--- a/Artywiz/etape-1-new.html
+++ b/Artywiz/etape-1-new.html
@@ -123,7 +123,7 @@
                             <td>
                     <![endif]-->
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <h1 style="font-family: adamcgpro; font-weight: normal; text-align: center;font-size: 24px; color: #419bf9;margin-top: 40px; margin-top: 39px; margin-bottom: 33px;">
+                                    <h1 style="font-family: adamcgpro !important; font-weight: normal; text-align: center;font-size: 24px; color: #419bf9;margin-top: 40px; margin-top: 39px; margin-bottom: 33px;">
                                         Animez <br> la communication <br> de votre club!
                                     </h1>
                                 </div>
@@ -416,12 +416,14 @@
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%); margin: 0px; border: solid 1px #3dbfa7;">
                                         <h2 style="
                                             background-color: #3dbfa7;
-                                            font-family: adamcgpro;
+                                            font-family: adamcgpro !important;
                                             font-size: 18px;
                                             font-weight: normal;
                                             color: #ffffff;
                                             margin: 0;
                                             padding: 33px 45px;
+                                            text-transform: uppercase;
+                                            text-align: center;
                                         ">
                                             Au programme sur ARTYWIZ Football
                                         </h2>
