--- a/Artywiz/etape-2-new.html
+++ b/Artywiz/etape-2-new.html
@@ -104,8 +104,8 @@
                         <tr>
                             <td align="center">
                     <![endif]-->
-                                <div style="text-align: center; margin-bottom: 35px;">
-                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582685475/etape-2/bg-etape-2.png" alt="">
+                                <div style="text-align: center; margin-bottom: 35px; vertical-align: top;">
+                                    <img width="100%" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582685475/etape-2/bg-etape-2.png" alt="">
                                 </div>
                     <!--[if mso]>
                             </td>
@@ -166,7 +166,7 @@
                                                                         Votre mot de passe :
                                                                     </p>
                                                                     <h2 style="font-family: Roboto; font-size: 	20px; font-weight: bold; color: #ffffff; margin: 0;">
-                                                                        {{ $props['password'] }}
+                                                                        JsbhAct4040
                                                                     </h2>
                                                                 </div>
                                                         <!--[if mso]>
@@ -201,62 +201,10 @@
                     <![endif]-->
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
-                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 65px; color: #607d8b;">
+                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 30px; color: #607d8b;">
                                             Remarque : vous pouvez transmettre cet email aux personnes en charge de la communication de votre club!
                                         </p>
                                     </div>
-                                </div>
-                    <!--[if mso]>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="center">
-                    <![endif]-->
-                                <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
-                                        <h2 style="font-size: 20px; font-weight: bold; line-height: 1.25; color: #2d2e2e; text-transform: uppercase; margin: 0; margin-bottom: 15px; margin-left: 30px;">Annoncer les matchs <br>de vos équipes</h2>
-                                        <img width="460" src="https://res.cloudinary.com/deovmejag/image/upload/v1570177903/Artywiz/stadion-annoncez.png" alt="" style="margin-bottom: 15px;">
-                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 22px; color: #607d8b;">
-                                            Aujourd’hui, découvrez comment faire des annonces de matchs de véritables évènements au sein de votre club et auprès de son public : <br><br>
-
-                                            1. Saisissez les détails du match, le nom de l’adversaire, choisissez les sponsors à valoriser, entrez votre message… <br><br>
-
-                                            2. ARTYWIZ va automatiquement créer pour vous toute une série de documents prêts à être publiés ou imprimés : Publication pour les réseaux sociaux, flyer, affiche A4, newsletter… <br><br>
-
-                                            Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
-                                        </p>
-                                    </div>
-                                </div>
-                    <!--[if mso]>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="center">
-                    <![endif]-->
-                                <div style="Margin: 0 30px 15px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570178315/Artywiz/mockup-ex-annoncez-1.png"/>
-                                    </div>
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179147/Artywiz/mockup-ex-annoncez-4.png"/>
-                                    </div>
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179018/Artywiz/mockup-ex-annoncez-3.png"/>
-                                    </div>
-                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
-                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582698632/Email%20Launching/mockup-ex-annoncez-2_1.png"/>
-                                    </div>
-                                </div>
-                    <!--[if mso]>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td align="center">
-                    <![endif]-->
-                                <div style="Margin: 0 30px 20px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 22px; color: #607d8b;">
-                                        Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
-                                    </p>
                                 </div>
                     <!--[if mso]>
                             </td>
@@ -308,6 +256,57 @@
                                             </tr>
                                         </table>
                                     <![endif]-->
+                                    </div>
+                                </div>
+                    <!--[if mso]>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                    <![endif]-->
+                                <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%);">
+                                    <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582773568/etape-2/banner-etape-2.png" alt="" style="width: 100%; margin-bottom: 40px;">
+                                </div>
+                    <!--[if mso]>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="center">
+                    <![endif]-->
+                                <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(230400px - 48000%); min-width:-webkit-calc(190px); width:calc(230400px - 48000%); min-width:calc(100%);">
+                                        <p style="text-align: left; margin: 0; margin-bottom: 30px; font-family: Roboto; font-size: 13px; font-weight: bold; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; color: #2d2e2e; text-transform: uppercase;">
+                                            communiquer les match
+                                        </p>
+                                        <p style="text-align: left; font-family: Roboto; font-size: 13px; font-weight: normal; font-stretch: normal; font-style: normal; line-height: normal; letter-spacing: normal; margin: 0 0 30px; color: #607d8b;">
+                                            Aujourd’hui, découvrez comment faire des annonces de matchs de véritables évènements au sein de votre club et auprès de son public : <br><br>
+
+                                            1. Saisissez les détails du match, le nom de l’adversaire, choisissez les sponsors à valoriser, entrez votre message… <br><br>
+
+                                            2. ARTYWIZ va automatiquement créer pour vous toute une série de documents prêts à être publiés ou imprimés : Publication pour les réseaux sociaux, flyer, affiche A4, newsletter… <br><br>
+
+                                            Pour en savoir plus, visualisez notre démo ou connectez-vous pour passer à l’action!
+                                        </p>
+                                    </div>
+                                </div>
+                    <!--[if mso]>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td align="center">
+                    <![endif]-->
+                                <div style="Margin: 0 30px 40px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570178315/Artywiz/mockup-ex-annoncez-1.png"/>
+                                    </div>
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179147/Artywiz/mockup-ex-annoncez-4.png"/>
+                                    </div>
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/deovmejag/image/upload/v1570179018/Artywiz/mockup-ex-annoncez-3.png"/>
+                                    </div>
+                                    <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(600px  - 100%); min-width:-webkit-calc(47%); width:calc(600px  - 100%); min-width:calc(47%); margin: 2px;">
+                                        <img width="100%" class="full-width" src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582698632/Email%20Launching/mockup-ex-annoncez-2_1.png"/>
                                     </div>
                                 </div>
                     <!--[if mso]>
@@ -420,14 +419,11 @@
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%); margin: 0px; border: solid 1px #39c9ef;">
                                         <h2 style="
                                             background-color: #39c9ef;
-                                            font-family: adamcgpro;
                                             font-size: 18px;
                                             font-weight: normal;
                                             color: #ffffff;
                                             margin: 0;
                                             padding: 33px 45px;
-                                            text-transform: uppercase;
-                                            text-align: center;
                                         ">
                                             Au programme sur ARTYWIZ Football
                                         </h2>
