Update email etape 2 & 3 etape 1 is not yet
Update email etape 2 & 3 etape 1 is not yet

--- a/Artywiz/etape-1-new.html
+++ b/Artywiz/etape-1-new.html
@@ -23,7 +23,7 @@
             font-family: 'Roboto', sans-serif !important;
         }
         h1{
-            font-family: adamcgpro !important;
+            font-family: 'adamcgpro', sans-serif !important
         }
         @media screen and (max-width: 600px) {
 
@@ -123,7 +123,7 @@
                             <td>
                     <![endif]-->
                                 <div style="Margin:0 30px; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif;">
-                                    <h1 style="font-family: adamcgpro !important; font-weight: normal; text-align: center;font-size: 24px; color: #419bf9;margin-top: 40px; margin-top: 39px; margin-bottom: 33px;">
+                                    <h1 style="font-family: 'adamcgpro', sans-serif !important; font-weight: normal; text-align: center;font-size: 24px; color: #419bf9;margin-top: 40px; margin-top: 39px; margin-bottom: 33px;">
                                         Animez <br> la communication <br> de votre club!
                                     </h1>
                                 </div>
@@ -269,7 +269,7 @@
                         <tr>
                             <td>
                     <![endif]-->
-                                <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%);">
+                                <div style="display: inline-block; width:100%; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%);">
                                     <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1582192056/etape-1/etape1banner.png" alt="" style="width: 100%; margin-bottom: 40px;">
                                 </div>
                     <!--[if mso]>
@@ -410,13 +410,13 @@
                             </td>
                         </tr>
                         <tr>
-                            <td style="padding: 0px 0 57px;" align="center">
+                            <td align="center">
                     <![endif]-->
                                 <div style="Margin: 0 30px 0; max-width:560px; min-width: 260px; font-family: 'Roboto', sans-serif; padding-bottom: 57px;">
                                     <div style="display: inline-block; width:190px; max-width:100%; width:-webkit-calc(480px - 100%); min-width:-webkit-calc(100%); width:calc(480px - 100%); min-width:calc(100%); margin: 0px; border: solid 1px #3dbfa7;">
                                         <h2 style="
                                             background-color: #3dbfa7;
-                                            font-family: adamcgpro !important;
+                                            font-family: 'adamcgpro', sans-serif !important;
                                             font-size: 18px;
                                             font-weight: normal;
                                             color: #ffffff;
@@ -437,7 +437,6 @@
                                             class="responsive-table"
                                             style="
                                                 padding: 30px 30px 50px 30px;
-                                                border: solid 1.5px #3dbfa7;
                                             ">
                                             <tr>
                                                 <td>
